[build-system]
requires = ["scikit-build-core>=0.11.0", "nanobind>=2.4.0"]
build-backend = "scikit_build_core.build"

# To debug build backend, replace by:
# cf https://peps.python.org/pep-0517/#in-tree-build-backends
#    requires = ["pybind11", "packaging", "pathspec"]
#    build-backend = "scikit_build_core.build"
#    backend-path = ["_backends/scikit-build-core/src/"]

[project]
name = "imgui-bundle"
version = "1.92.600"  # Based on ImGui 1.92.6 - Remember to mirror changes on line 3 of main CMakeLists! Version = ImGui patch × 100 + bundle release
description="Dear ImGui Bundle: From expressive code to powerful GUIs in no time. A fast, feature-rich, cross-platform toolkit for C++ and Python."
readme = "bindings/imgui_bundle/Readme_pypi.md"
authors = [ { name = "Pascal Thomet", email = "pthomet@gmail.com" } ]
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "License :: OSI Approved :: MIT License",
    "Topic :: Scientific/Engineering",
    "Typing :: Typed",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3 :: Only",
]

dependencies = [
    "numpy",
]

[project.optional-dependencies]
# To be able to display plots
matplotlib = ["matplotlib"]
# To use image processing features
imgproc = ["pillow", "opencv-python"]
pydantic = ["pydantic>=2.0.0"]
# For pure python backends
opengl = ["PyOpenGL"]
glfw = ["glfw"]
sdl2 = ["PySDL2"]
sdl3 = ["PySDL3"]
wgpu = ["wgpu", "rendercanvas"]
pyglet = ["pyglet"]
all_backends = [
    "PyOpenGL",
    "glfw",
    "PySDL2",
    "PySDL3",
    "wgpu",
    "pyglet",
]
# full installation
full = [
    "matplotlib",
    "pillow",
    "opencv-python",
    "PyOpenGL",
    "glfw",
    "PySDL2",
    "PySDL3",
    "wgpu",
    "rendercanvas",
    "pyglet",
    "pydantic>=2.0.0",
    "PyGLM"
]
# For development and testing
test = ["pytest", "pytest-asyncio"]



[project.urls]
Homepage = "https://pthom.github.io/imgui_bundle/"
Documentation = "https://pthom.github.io/imgui_bundle/"
Repository = "https://github.com/pthom/imgui_bundle"
Issues = "https://github.com/pthom/imgui_bundle/issues"
Changelog = "https://github.com/pthom/imgui_bundle/blob/main/CHANGELOG.md"

[project.scripts]
demo_imgui_bundle="imgui_bundle.demos_python.demo_imgui_bundle:main"
imgui_bundle_demo="imgui_bundle.demos_python.demo_imgui_bundle:main"

[tool.scikit-build]
wheel.expand-macos-universal-tags = true
wheel.packages = ["bindings/imgui_bundle"]
sdist.exclude = [
    ".git",
    ".github",
    "external/*/.git",
    "ci_scripts",
    "docs",
    "imgui_bundle_assets",  # only for C++ apps
    # Build artifacts
    "build*",
    "external/*/build*",
    "_skbuild",
    "*.so",
    "*.dylib",
    "*.dll",
    "*.pyd",
    "*.egg-info",
    "__pycache__",
    # Virtual environments
    "venv*",
    ".venv*",
    "v3*",
    # Dependency managers & pip outputs
    "vcpkg",
    "dist",
    "wheelhouse",
]

# Exclude demo directories to reduce wheel size (set IMGUI_BUNDLE_EXCLUDE_DEMOS=1 to activate)
[[tool.scikit-build.overrides]]
if.env.IMGUI_BUNDLE_EXCLUDE_DEMOS = true
wheel.exclude = ["imgui_bundle/demos_cpp/**", "imgui_bundle/demos_python/**", "imgui_bundle/demos_assets/**"]

cmake.version = ">=3.26.1"
build.verbose = true
logging.level = "INFO"


[tool.isort]
profile = "black"


#####################################
# Wheels options
#####################################
[tool.cibuildwheel]
build-verbosity = 1

# Target python versions:
build = ["cp311-*", "cp312-*", "cp313-*", "cp314-*"]

# Tests : we ignore the python GUI tests here, as they require a display
# (note: those tests are run in the pip.yml GitHub actions workflows)
test-requires = ["pytest", "pytest-asyncio"]
test-command = "pytest {project}/tests --ignore={project}/tests/tests_python_gui"


#------------------------------------
# macos wheels options
#------------------------------------
[tool.cibuildwheel.macos]
# identify whether this is a M1 or intel
before-build = "uname -a"
# Skip trying to test arm64 builds on Intel Macs
# test-skip = ["*-macosx_arm64 *-macosx_universal2:arm64"]
#
# Skip trying to test x86_64 builds on Mac M1
# test-skip = ["*-macosx_x86_64 *-macosx_universal2:x86_64"]
# test-skip = ["*-macosx_arm64 *-macosx_universal2:arm64"]
test-skip = ["*"]
# Environment variables
environment = { MACOSX_DEPLOYMENT_TARGET="14.0" }

# Architectures
# -------------
# archs = ["universal2"] # building universal2 fails miserably at this time: see comment in external/immvision/find_opencv.cmake
# So, we build separately for x86_64 and arm64
archs = ["x86_64", "arm64"]

#------------------------------------
# linux wheels options
#------------------------------------
[tool.cibuildwheel.linux]
skip = ["*i686"]
test-skip = ["*-musllinux_*"] #  issue with OpenGL on musllinux
# Environment variables
environment-pass = ["IMMVISION_OPENCV_GIT_REPO"]  # pass alternative git repo to docker build containers
# Pre-built OpenCV: built once in before-all, reused by all Python versions
environment = { CMAKE_PREFIX_PATH="/opt/opencv_minimalist", OpenCV_STATIC="ON" }


# Install glfw dev packages on manylinux:
# --------------------------------------
# https://www.glfw.org/docs/3.3/compile.html#compile_deps
# https://iscinumpy.dev/post/cibuildwheel-2-2-0/
# cibuildwheel has added a new platform: musllinux
# Remember, the manylinux1 image has been in maintenance mode, has no support for Python 3.10,
# and will be fully retired at the end of 2021.
#
# This also means that installing things inside the images can vary even further;
# * manylinux1 (CentOS 5), manylinux2010 (CentOS 6), and manylinux2014 (CentOS 7) all use yum;
#     => yum install -y libXcursor-devel libXi-devel libXinerama-devel libXrandr-devel
# * manylinux_2_24 (Debian 8) uses apt (and is stuck on GCC 6),
#     => apt install xorg-dev
# * musllinux_1_1 MUSL based distributions of Linux (like Alpine). uses apk
#
# Also, do the equivalent of:
# sudo apt-get install -y xorg-dev libgl1-mesa-dev libglfw3-dev libglew-dev xvfb

# sudo apt-get install -y libgl1-mesa-dev
before-all = "yum install -y libXcursor-devel libXi-devel libXinerama-devel libXrandr-devel mesa-libGL-devel && bash {project}/external/immvision/immvision/cmake/build_opencv.sh /opt/opencv_minimalist"
[[tool.cibuildwheel.overrides]]
select = "*-musllinux*"
before-all = "apk add xorg-server-dev libxcursor-dev libxi-dev libxinerama-dev libxrandr-dev mesa-dev mesa-gl cmake curl bash && bash {project}/external/immvision/immvision/cmake/build_opencv.sh /opt/opencv_minimalist"

#------------------------------------
# windows wheels options
#------------------------------------
[tool.cibuildwheel.windows]
skip = ["*win32"]
# Pre-built static OpenCV: built once in before-all, reused by all Python versions.
# This replaces the previous opencv_world.dll download, making wheels ~14MB smaller.
# We use CMAKE_PREFIX_PATH (not OpenCV_DIR) because the install layout varies by
# MSVC version — find_package(OpenCV) searches standard subdirectories under the prefix.
before-all = "bash {project}/external/immvision/immvision/cmake/build_opencv.sh C:/opencv_minimalist"
environment = { CMAKE_PREFIX_PATH="C:/opencv_minimalist", OpenCV_STATIC="ON" }

#------------------------------------
# android wheels
#------------------------------------
# Android wheel support is experimental, and available in a separate branch (not officially supported at the moment)
# See: https://github.com/pthom/imgui_bundle/tree/android-wheel
# Related PR: https://github.com/pthom/imgui_bundle/pull/438

# ═══════════════════════════════════════════════════════════════════════════
# Custom Build Configurations
# ═══════════════════════════════════════════════════════════════════════════
# You may disable some submodules of imgui_bundle if you do not need them.
# Common cases are:
# 1. to disable immvision (to avoid the OpenCV dependency)
#    Pass -DIMGUI_BUNDLE_WITH_IMMVISION=OFF, e.g.:
#        CMAKE_ARGS="-DIMGUI_BUNDLE_WITH_IMMVISION=OFF" pip install -v .
#    or
#        CMAKE_ARGS="-DIMGUI_BUNDLE_WITH_IMMVISION=OFF" python -m build --wheel
#
# 2. to disable hello_imgui (to avoid the windowing dependencies)
#   Pass -DIMGUI_BUNDLE_WITH_HELLO_IMGUI=OFF, e.g.:
#        CMAKE_ARGS="-DIMGUI_BUNDLE_WITH_HELLO_IMGUI=OFF" pip install -v .
#   If you disable hello_imgui, several dependent modules will be auto-disabled:
#     immapp, imgui_md, im_file_dialog, imgui_tex_inspect, immvision, imgui_test_engine, and the glfw backend.

