set(CMAKE_CXX_STANDARD 20)
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}/bin")
include_directories(${CMAKE_CURRENT_LIST_DIR})

function(add_demo_cpp)
    set(args ${ARGN})
    list(GET args 0 app_name)
    imgui_bundle_add_app(${args})
    if(MSVC)
        hello_imgui_msvc_target_set_folder(${app_name} demos_cpp)
    endif()
    target_link_libraries(${app_name} PUBLIC demo_utils)
endfunction()

add_subdirectory(demo_utils)
add_subdirectory(demo_haiku_implot_heart)
add_subdirectory(demo_texteditor)
add_subdirectory(demo_widgets_docking)
add_subdirectory(demo_imgui_node_editor)
add_subdirectory(demo_powersave)
add_subdirectory(demos_imguizmo)
add_subdirectory(demos_tex_inspect)

if (IMGUI_BUNDLE_WITH_IMMVISION)
    add_subdirectory(demos_immvision)
endif()

FILE(COPY assets DESTINATION ${CMAKE_RUNTIME_OUTPUT_DIRECTORY})
